--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^10.0.0",
     "ejs": "3.1.6",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "nodemon": "2.0.12"
   }
 }
